tests/invalid/simple/Assign_CompileFail_3.whiley
bool f(int x, int y):
     return  + y

